--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,14 @@ server.port=8081
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/springbatch
-spring.datasource.username = ${username}
-spring.datasource.password = ${password}
+spring.datasource.username = root
+spring.datasource.password = Arun@12345
 spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
-
+spring.batch.jdbc.initialize-schema=ALWAYS
 #disabled job run at startup
 spring.batch.job.enabled=false
-input=file:candidates.csv
+hibernate.allow_update_outside_transaction=true
+
